feat(api): expose CLI as an API

--- a/.github/workflows/pr-lint.yml
+++ b/.github/workflows/pr-lint.yml
@@ -28,6 +28,7 @@ jobs:
           scopes: |
             lib
             cli
+            api
             hcl2json
             hcl2cdk
             provider-generator
