--- a/packages/cdktf-cli/package.json
+++ b/packages/cdktf-cli/package.json
@@ -38,6 +38,7 @@
     "@sentry/node": "^6.19.7",
     "@types/yargs": "^17.0.13",
     "cdktf": "0.0.0",
+    "cli-table": "^0.3.11",
     "codemaker": "^1.68.0",
     "constructs": "^10.0.25",
     "cross-spawn": "^7.0.3",
@@ -102,6 +103,7 @@
     "@skorfmann/ink-confirm-input": "^3.0.0",
     "@skorfmann/terraform-cloud": "^1.15.0",
     "@types/archiver": "^5.3.1",
+    "@types/cli-table": "^0.3.1",
     "@types/cross-spawn": "^6.0.2",
     "@types/detect-port": "^1.3.2",
     "@types/follow-redirects": "^1.14.1",
