chore(docs): translate hcl-interop examples to c#

--- a/examples/csharp/documentation/MyTerraformStack.csproj
+++ b/examples/csharp/documentation/MyTerraformStack.csproj
@@ -22,4 +22,7 @@
     <ProjectReference Include=".gen\kubernetes\kubernetes.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include=".gen\random\random.csproj" />
+  </ItemGroup>
 </Project>
